# Numerical-Linear-Algebra

./: CHANGELOG  CMakeLists.txt  INSTALL  LICENSE  README.md  build.sh  git.sh  my_package-config.cmake
cmake/: GetEigen3.cmake  GetFTXUI.cmake  GetGMTL.cmake  GetMatplotlib_cpp.cmake  Install.cmake  Optimized.cmake
modules/: CMakeLists.txt
modules/2-iterative-methods/: CMakeLists.txt  README.md  iterative_methods-impl.cpp  iterative_methods-interface.cppm  matrix.cpp  matrix.h
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calc.cpp
src/calc/include/calc/: calc.h
src/calc_console/: CMakeLists.txt  tui.cpp
src/num_console/: CMakeLists.txt  bootstrap.cpp  tui.cpp
src/num_console/include/: tui.h
test/: CMakeLists.txt
test/calc/: CMakeLists.txt  calc_test.cpp
test/calc_console/: tui_test.cpp
test/mocks/: rng_mock.h
test/num_console/: CMakeLists.txt  tui_test.cpp
